--- a/KosaESS/src/main/resources/templates/include/student_footer.html
+++ b/KosaESS/src/main/resources/templates/include/student_footer.html
@@ -2,87 +2,44 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer">
 	<footer>
-		<div class="footer-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-3 footer-about wow fadeInUp">
-						<img class="logo-footer" src="assets/img/logo.png"
-							alt="logo-footer" data-at2x="assets/img/logo.png">
-						<p>We are a young company always looking for new and creative
-							ideas to help you with our products in your everyday work.</p>
-						<p>
-							<a href="#">Our Team</a>
-						</p>
-					</div>
-					<div class="col-md-4 offset-md-1 footer-contact wow fadeInDown">
-						<h3>Contact</h3>
-						<p>
-							<i class="fas fa-map-marker-alt"></i> Via Rossini 10, 10136 Turin
-							Italy
-						</p>
-						<p>
-							<i class="fas fa-phone"></i> Phone: (0039) 333 12 68 347
-						</p>
-						<p>
-							<i class="fas fa-envelope"></i> Email: <a
-								href="mailto:hello@domain.com">hello@domain.com</a>
-						</p>
-						<p>
-							<i class="fab fa-skype"></i> Skype: you_online
-						</p>
-					</div>
-					<div class="col-md-4 footer-links wow fadeInUp">
-						<div class="row">
-							<div class="col">
-								<h3>Links</h3>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6">
-								<p>
-									<a class="scroll-link" href="#top-content">Home</a>
-								</p>
-								<p>
-									<a href="#">Features</a>
-								</p>
-								<p>
-									<a href="#">How it works</a>
-								</p>
-								<p>
-									<a href="#">Our clients</a>
-								</p>
-							</div>
-							<div class="col-md-6">
-								<p>
-									<a href="#">Plans &amp; pricing</a>
-								</p>
-								<p>
-									<a href="#">Affiliates</a>
-								</p>
-								<p>
-									<a href="#">Terms</a>
-								</p>
-							</div>
-						</div>
-					</div>
+		<div class="container" style="margin-bottom: 0;">
+			<div class="footerBody">
+				<div class="footerImg">
+					<a th:href="@{/student}"><img th:src="@{/img/footer_logo.png}"
+						style="height: 130px;"></a>
+				</div>
+				<div class="links">
+					<h2>Links</h2>
+					<ul>
+						<li><a th:href="@{/student/class}"><img
+								th:src="@{/img/education.png}"></a><span>교육과정지원</span></li>
+						<li><a th:href="@{/student/notice}"><img
+								th:src="@{/img/notice.png}"></a><span>공지사항</span></li>
+						<li><a th:href="@{/student/inquiry}"><img
+								th:src="@{/img/inquiry.png}"></a><span>문의사항</span></li>
+					</ul>
+				</div>
+				<div class="contact" style="width:30%;">
+					<h2>Contact</h2>
+					<ul>
+						<li><img th:src="@{/img/ping.png}"><span
+							style="width: 15%">주소 </span><span>서울시 용산구 청파로 61길 5 6F~8F</span></li>
+						<li><img th:src="@{/img/phone.png}"><span>전화번호 </span><span>
+								010-5744-9937</span></li>
+						<li><img th:src="@{/img/email.png}"><span>이메일 </span><span>
+								kcceducation@gmail.com</span></li>
+					</ul>
+				</div>
+				<div class="emailJoin">
+					<label for="email"
+						style="padding-bottom: 20%; color: #E7EFF3; font-weight: bold; font-size: 18px;">협회
+						소식을 받아보새요.</label> <input type="email" value="이메일을 입력하세요." id="email">
+					<button type="submit">구독하기</button>
 				</div>
 			</div>
 		</div>
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 footer-copyright">
-						&copy; Bootstrap Footer Template by <a href="https://azmind.com">AZMIND</a>
-					</div>
-					<div class="col-md-6 footer-social">
-						<a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i
-							class="fab fa-twitter"></i></a> <a href="#"><i
-							class="fab fa-google-plus-g"></i></a> <a href="#"><i
-							class="fab fa-instagram"></i></a> <a href="#"><i
-							class="fab fa-pinterest"></i></a>
-					</div>
-				</div>
-			</div>
+		<div class="footerFoot">
+			&copy; KCCEducation Footer Template by <a th:href="@{/student}">KOSA</a>
 		</div>
 	</footer>
 </div>
